package main

import (
	"context"
	"fmt"
	"log"
	"net"
	"time"

	"github.com/ceyewan/genesis/clog"
	"github.com/ceyewan/genesis/connector"
	pb "github.com/ceyewan/genesis/examples/grpc-registry/proto"
	"github.com/ceyewan/genesis/registry"
	"google.golang.org/grpc"
	"google.golang.org/grpc/health"
	"google.golang.org/grpc/health/grpc_health_v1"
)

// æ¼”ç¤º gRPC Resolver åŠ¨æ€æœåŠ¡å‘ç°åŠŸèƒ½
func main() {
	fmt.Println("=== gRPC Resolver åŠ¨æ€æœåŠ¡å‘ç°æ¼”ç¤º ===")
	fmt.Println("æ³¨æ„ï¼šæ­¤æ¼”ç¤ºéœ€è¦è¿è¡Œ etcd æœåŠ¡")
	fmt.Println("å¯åŠ¨å‘½ä»¤ï¼šetcd --listen-client-urls=http://localhost:2379 --advertise-client-urls=http://localhost:2379")
	fmt.Println()

	// 1. åˆ›å»º Logger
	logger, _ := clog.New(&clog.Config{
		Level:  "info",
		Format: "console",
		Output: "stdout",
	})

	// 2. åˆ›å»º Etcd è¿æ¥å™¨
	etcdConn, err := connector.NewEtcd(&connector.EtcdConfig{
		Endpoints: []string{"localhost:2379"},
	}, connector.WithLogger(logger))
	if err != nil {
		log.Fatalf("Failed to create etcd connector: %v", err)
	}
	defer etcdConn.Close()

	// 3. åˆ›å»º Registry å®ä¾‹
	reg, err := registry.New(etcdConn, &registry.Config{
		Namespace:       "/genesis/services",
		Schema:          "etcd",
		DefaultTTL:      30 * time.Second,
		RetryInterval:   1 * time.Second,
		EnableCache:     true,
		CacheExpiration: 10 * time.Second,
	}, registry.WithLogger(logger))
	if err != nil {
		log.Fatalf("Failed to create registry: %v", err)
	}

	// 4. å»¶è¿Ÿå…³é—­ Registry
	defer reg.Close()
	ctx, cancel := context.WithTimeout(context.Background(), 60*time.Second)
	defer cancel()

	serviceName := "demo-service"

	// 5. å¯åŠ¨ç¬¬ä¸€ä¸ªæœåŠ¡å®ä¾‹
	fmt.Println("1. å¯åŠ¨ç¬¬ä¸€ä¸ªæœåŠ¡å®ä¾‹...")
	server1, addr1 := startTestServer("server-1")
	defer server1.Stop()

	service1 := &registry.ServiceInstance{
		ID:        "demo-service-1",
		Name:      serviceName,
		Version:   "1.0.0",
		Endpoints: []string{fmt.Sprintf("grpc://%s:%d", addr1.IP.String(), addr1.Port)},
		Metadata: map[string]string{
			"version": "1.0.0",
			"server":  "server-1",
		},
	}

	err = reg.Register(ctx, service1, 30*time.Second)
	if err != nil {
		log.Fatalf("Failed to register service 1: %v", err)
	}
	defer reg.Deregister(ctx, service1.ID)

	fmt.Printf("âœ“ æœåŠ¡å®ä¾‹ 1 å·²æ³¨å†Œ: %s\n", service1.Endpoints[0])

	// ç­‰å¾…æœåŠ¡æ³¨å†Œç”Ÿæ•ˆ
	time.Sleep(500 * time.Millisecond)

	// 6. ä½¿ç”¨ gRPC resolver åˆ›å»ºè¿æ¥
	fmt.Println("\n2. ä½¿ç”¨ gRPC resolver åˆ›å»ºè¿æ¥...")
	conn, err := reg.GetConnection(ctx, serviceName)
	if err != nil {
		log.Fatalf("Failed to create gRPC connection: %v", err)
	}
	defer conn.Close()

	echoClient := pb.NewEchoServiceClient(conn)
	healthClient := grpc_health_v1.NewHealthClient(conn)
	fmt.Println("âœ“ gRPC è¿æ¥å·²å»ºç«‹ï¼Œä½¿ç”¨åŠ¨æ€æœåŠ¡å‘ç°")

	// 7. æµ‹è¯•è¿æ¥
	fmt.Println("\n3. æµ‹è¯•è¿æ¥...")
	for i := 0; i < 3; i++ {
		resp, err := healthClient.Check(ctx, &grpc_health_v1.HealthCheckRequest{})
		if err != nil {
			log.Printf("Health check failed: %v", err)
		} else {
			state := conn.GetState()
			fmt.Printf("âœ“ å¥åº·æ£€æŸ¥ %d: %v (è¿æ¥çŠ¶æ€: %v)\n", i+1, resp.Status, state)
		}
		time.Sleep(200 * time.Millisecond)
	}

	// è°ƒç”¨ Echo æœåŠ¡æŸ¥çœ‹æœåŠ¡å™¨ä¿¡æ¯
	fmt.Println("\nè°ƒç”¨ Echo æœåŠ¡æŸ¥çœ‹æœåŠ¡å™¨ä¿¡æ¯:")
	for i := 0; i < 3; i++ {
		echoResp, err := echoClient.Echo(ctx, &pb.EchoRequest{
			Message: fmt.Sprintf("test-%d", i+1),
		})
		if err != nil {
			fmt.Printf("âœ— Echo è°ƒç”¨ %d å¤±è´¥: %v\n", i+1, err)
		} else {
			fmt.Printf("âœ“ Echo è°ƒç”¨ %d: æ¶ˆæ¯='%s', æœåŠ¡å™¨='%s', åœ°å€='%s'\n",
				i+1, echoResp.Message, echoResp.ServerId, echoResp.ServerAddr)
		}
		time.Sleep(100 * time.Millisecond)
	}

	// 8. åŠ¨æ€æ·»åŠ ç¬¬äºŒä¸ªæœåŠ¡å®ä¾‹
	fmt.Println("\n4. åŠ¨æ€æ·»åŠ ç¬¬äºŒä¸ªæœåŠ¡å®ä¾‹...")
	server2, addr2 := startTestServer("server-2")
	defer server2.Stop()

	service2 := &registry.ServiceInstance{
		ID:        "demo-service-2",
		Name:      serviceName,
		Version:   "1.0.1",
		Endpoints: []string{fmt.Sprintf("grpc://%s:%d", addr2.IP.String(), addr2.Port)},
		Metadata: map[string]string{
			"version": "1.0.1",
			"server":  "server-2",
		},
	}

	err = reg.Register(ctx, service2, 30*time.Second)
	if err != nil {
		log.Fatalf("Failed to register service 2: %v", err)
	}
	defer reg.Deregister(ctx, service2.ID)

	fmt.Printf("âœ“ æœåŠ¡å®ä¾‹ 2 å·²æ³¨å†Œ: %s\n", service2.Endpoints[0])

	// ç­‰å¾… resolver æ£€æµ‹åˆ°æ–°æœåŠ¡
	fmt.Println("â³ ç­‰å¾… resolver æ£€æµ‹åˆ°æ–°æœåŠ¡...")
	time.Sleep(1 * time.Second)

	// 9. éªŒè¯è´Ÿè½½å‡è¡¡
	fmt.Println("\n5. éªŒè¯è´Ÿè½½å‡è¡¡ï¼ˆç°åœ¨æœ‰ä¸¤ä¸ªæœåŠ¡å®ä¾‹ï¼‰...")
	fmt.Printf("å·²æ³¨å†Œçš„æœåŠ¡å®ä¾‹:\n")
	services, _ := reg.GetService(ctx, serviceName)
	for i, svc := range services {
		fmt.Printf("  %d. ID: %s, Endpoints: %v, Server: %s\n", i+1, svc.ID, svc.Endpoints, svc.Metadata["server"])
	}
	fmt.Println()

	for i := 0; i < 6; i++ {
		// è°ƒç”¨ Echo æœåŠ¡æ¥è§‚å¯Ÿè´Ÿè½½å‡è¡¡æ•ˆæœ
		echoResp, err := echoClient.Echo(ctx, &pb.EchoRequest{
			Message: fmt.Sprintf("loadbalancer-test-%d", i+1),
		})
		if err != nil {
			fmt.Printf("âœ— è´Ÿè½½å‡è¡¡æµ‹è¯• %d å¤±è´¥: %v\n", i+1, err)
		} else {
			fmt.Printf("âœ“ è´Ÿè½½å‡è¡¡æµ‹è¯• %d: æ¶ˆæ¯='%s', æœåŠ¡å™¨='%s', åœ°å€='%s'\n",
				i+1, echoResp.Message, echoResp.ServerId, echoResp.ServerAddr)
		}
		time.Sleep(200 * time.Millisecond)
	}

	// 10. ç§»é™¤ç¬¬ä¸€ä¸ªæœåŠ¡å®ä¾‹
	fmt.Println("\n6. ç§»é™¤ç¬¬ä¸€ä¸ªæœåŠ¡å®ä¾‹...")
	err = reg.Deregister(ctx, service1.ID)
	if err != nil {
		log.Printf("Failed to unregister service 1: %v", err)
	} else {
		fmt.Println("âœ“ æœåŠ¡å®ä¾‹ 1 å·²ç§»é™¤")
	}

	// ç­‰å¾… resolver æ£€æµ‹åˆ°æœåŠ¡ç§»é™¤
	fmt.Println("â³ ç­‰å¾… resolver æ£€æµ‹åˆ°æœåŠ¡ç§»é™¤...")
	time.Sleep(1 * time.Second)

	// 11. éªŒè¯è¿æ¥ä»ç„¶å¯ç”¨
	fmt.Println("\n7. éªŒè¯è¿æ¥ä»ç„¶å¯ç”¨ï¼ˆåªå‰©ä¸€ä¸ªæœåŠ¡å®ä¾‹ï¼‰...")
	for i := 0; i < 3; i++ {
		echoResp, err := echoClient.Echo(ctx, &pb.EchoRequest{
			Message: fmt.Sprintf("failover-test-%d", i+1),
		})
		if err != nil {
			fmt.Printf("âœ— æ•…éšœè½¬ç§»æµ‹è¯• %d å¤±è´¥: %v\n", i+1, err)
		} else {
			fmt.Printf("âœ“ æ•…éšœè½¬ç§»æµ‹è¯• %d: æ¶ˆæ¯='%s', æœåŠ¡å™¨='%s', åœ°å€='%s'\n",
				i+1, echoResp.Message, echoResp.ServerId, echoResp.ServerAddr)
		}
		time.Sleep(200 * time.Millisecond)
	}

	// 12. éªŒè¯æœåŠ¡å‘ç°
	fmt.Println("\n8. éªŒè¯æœåŠ¡å‘ç°...")
	services, err = reg.GetService(ctx, serviceName)
	if err != nil {
		log.Printf("Failed to discover services: %v", err)
	} else {
		fmt.Printf("âœ“ å‘ç° %d ä¸ªæœåŠ¡å®ä¾‹:\n", len(services))
		for _, svc := range services {
			fmt.Printf("  - ID: %s, Endpoints: %v, Version: %s\n",
				svc.ID, svc.Endpoints, svc.Metadata["version"])
		}
	}

	fmt.Println("\n=== æ¼”ç¤ºå®Œæˆ ===")
	fmt.Println("âœ… gRPC resolver æˆåŠŸå®ç°äº†åŠ¨æ€æœåŠ¡å‘ç°å’Œè´Ÿè½½å‡è¡¡ï¼")
	fmt.Println("\nä¸»è¦ç‰¹æ€§:")
	fmt.Println("  â€¢ åŠ¨æ€æœåŠ¡å‘ç°ï¼šè‡ªåŠ¨æ£€æµ‹æ–°å¢çš„æœåŠ¡å®ä¾‹")
	fmt.Println("  â€¢ è´Ÿè½½å‡è¡¡ï¼šä½¿ç”¨ round_robin ç­–ç•¥åˆ†å‘è¯·æ±‚")
	fmt.Println("  â€¢ æ•…éšœè½¬ç§»ï¼šæœåŠ¡å®ä¾‹ä¸‹çº¿æ—¶è‡ªåŠ¨åˆ‡æ¢åˆ°å¯ç”¨å®ä¾‹")
	fmt.Println("  â€¢ å®æ—¶æ›´æ–°ï¼šé€šè¿‡ etcd watch æœºåˆ¶å®æ—¶æ„ŸçŸ¥æœåŠ¡å˜åŒ–")
}

// startTestServer å¯åŠ¨ä¸€ä¸ªæµ‹è¯•ç”¨çš„ gRPC æœåŠ¡å™¨
func startTestServer(serverID string) (*grpc.Server, *net.TCPAddr) {
	// ç›‘å¬éšæœºç«¯å£
	lis, err := net.Listen("tcp", "127.0.0.1:0")
	if err != nil {
		log.Fatalf("Failed to listen: %v", err)
	}

	server := grpc.NewServer()
	addr := lis.Addr().(*net.TCPAddr)

	// æ³¨å†Œ Echo æœåŠ¡
	pb.RegisterEchoServiceServer(server, &echoServer{
		serverID:   serverID,
		serverAddr: addr.String(),
	})

	// æ³¨å†Œå¥åº·æ£€æŸ¥æœåŠ¡
	healthServer := health.NewServer()
	grpc_health_v1.RegisterHealthServer(server, healthServer)
	healthServer.SetServingStatus("", grpc_health_v1.HealthCheckResponse_SERVING)

	// å¯åŠ¨æœåŠ¡å™¨
	go func() {
		if err := server.Serve(lis); err != nil {
			log.Printf("Server %s exited with error: %v", serverID, err)
		}
	}()

	// ç­‰å¾…æœåŠ¡å™¨å¯åŠ¨
	time.Sleep(100 * time.Millisecond)

	log.Printf("Test server %s started on %s (Server ID: %s)", serverID, addr, serverID)

	return server, addr
}

// echoServer å®ç° Echo æœåŠ¡
type echoServer struct {
	pb.UnimplementedEchoServiceServer
	serverID   string
	serverAddr string
}

func (s *echoServer) Echo(ctx context.Context, req *pb.EchoRequest) (*pb.EchoResponse, error) {
	log.Printf("ğŸ“¢ [%s] Echo è¯·æ±‚æ”¶åˆ°: %s", s.serverID, req.Message)

	resp := &pb.EchoResponse{
		Message:    req.Message,
		ServerId:   s.serverID,
		ServerAddr: s.serverAddr,
		Timestamp:  time.Now().Unix(),
	}

	log.Printf("ğŸ“¢ [%s] Echo å“åº”: æ¶ˆæ¯='%s', æœåŠ¡å™¨='%s', åœ°å€='%s'",
		s.serverID, resp.Message, resp.ServerId, resp.ServerAddr)

	return resp, nil
}
